# dis

./: .project-history-dir  README.md  meson.build
.github/workflows/: build.yml  coveralls.yml
docs/adr/: 0001-record-architecture-decisions.md  0002-stl-handling.md  0003-library-content.md  0004-iterator-support.md
docs/history/2023/2023-04/: 2023-04-01T08:47:31Z_post_lsdpKl_Hk34NSN6T.md  2023-04-01T08_50_51Z_post_FrEJMxh0sVuwqxOl.md  2023-04-01T09_13_50Z_post_z3anOaCXE7dQ9ZMH.md
include/dis/: iterator.hpp
include/dis/iterator/: concepts.hpp
include/dis/meta/: sequence.hpp  type_traits.hpp
include/dis/meta/proto/: empty.hpp  push_back.hpp  push_front.hpp  size.hpp
include/dis/meta/sequence/: base.hpp  empty.hpp  push_back.hpp  push_front.hpp  size.hpp
include/dis/meta/type_traits/: is_base_of.hpp  is_same.hpp
include/dis/meta/utility/: bool_constant.hpp  integral_constant.hpp
subprojects/: unittest-cpp.wrap
tests/unit_tests/: main.cpp  meson.build  test_framework.hpp
tests/unit_tests/iterator/: bidirectional_iterator_tests.cpp  forward_iterator_tests.cpp  input_iterator_tests.cpp
tests/unit_tests/meta/sequence/: empty_tests.cpp  push_back_tests.cpp  push_front_tests.cpp  size_tests.cpp
